# GroqChat-Lite

./: README.md  package-lock.json  package.json
.github/workflows/: windows-build.yml
src/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
