[package]
name = "groqchat-lite"
version = "1.0.0"
description = "A minimal Groq Chat Client"
authors = ["You"]
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5" }

[dependencies]
tauri = { version = "1.6", features = ["api-all", "custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
